fix empty cart alignment

--- a/projet/src/app/cart/cart.component.scss
+++ b/projet/src/app/cart/cart.component.scss
@@ -135,8 +135,8 @@ select{
 #empty-cart-container{
     display: flex;
     justify-content: center;
-    // FIXME: set to parent container height
-    height: 50em;
+    height: 100vh;
+    align-items: center;
 }
 
 #empty-cart-contents{
@@ -144,7 +144,6 @@ select{
     flex-direction: column;
     align-items: center;
     position: absolute;
-    top: 40%;
 }
 
 #empty-cart-img{
@@ -166,5 +165,9 @@ select{
 
 p{
     line-height: 24px;
+}
+
+#empty-cart-text{
     margin-top: 48px;
+    text-align: center;
 }
